--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,22 @@
+version: 1
+build:
+  proto:
+    path: proto
+    third_party_paths:
+    - third_party/proto
+    - proto_vendor
 accounts:
-  - name: alice
-    coins: ["1000token", "100000000stake"]
-  - name: bob
-    coins: ["500token"]
-validator:
-  name: alice
-  staked: "100000000stake"
-host:
-  frontend: ":8081"
+- name: alice
+  coins:
+  - 1000token
+  - 100000000stake
+- name: bob
+  coins:
+  - 500token
+faucet:
+  name: null
+  coins: []
+  host: 0.0.0.0:4500
+validators:
+- name: alice
+  bonded: 100000000stake
